# vibemax

./: .gitignore  README.md  main.py  pyproject.toml  test_vibemax.py
vibemax/: __init__.py  core.py
